moved lessonmanager download to use OnionKit library